manifests/hockeytrainer-chart.yaml
---
# Source: chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
  annotations:
    app: hockeytrainer
  name: hockeytrainer
  clusterName: raspberrypi
---
# Source: chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hockeytrainer-svc
  namespace: hockeytrainer
  labels:
    app: hockeytrainer
spec:
  ports:
  - name: http
    port: 8080
    nodePort: 30082
  selector:
    app: hockeytrainer
  type: NodePort
---
# Source: chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hockeytrainer
  namespace: hockeytrainer
  labels:
    app: hockeytrainer
  annotations:
    app: hockeytrainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hockeytrainer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: hockeytrainer
      namespace: hockeytrainer
      labels:
        app: hockeytrainer
      annotations:
        app: hockeytrainer
    spec:
      containers:
      - name: hockeytrainer
        image: smarman/hockeytrainer:0.0.18-arm
        command: ["./bin/run.sh"]
        imagePullPolicy: Always
          #livenessProbe:
          #  httpGet:
          #    path: /about
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 60
        ports:
        - containerPort: 8080
        stdin: true
        tty: true
        volumeMounts:
        - name: config-volume
          mountPath: /go/src/hockeytrainer
      restartPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: hockeytrainer-cm
---
# Source: chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hockeytrainer-ing
  namespace: hockeytrainer
spec:
    rules:
    - host: hockeytrainer.local.seanhome.xyz
      http:
        paths:
        - backend:
            service:
              name: hockeytrainer-svc
              port:
                name: http
          path: /
          pathType: ImplementationSpecific
---
# Source: chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "hockeytrainer-chart-test-connection"
  labels:
    helm.sh/chart: chart-0.1.0
    app.kubernetes.io/name: chart
    app.kubernetes.io/instance: hockeytrainer
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['hockeytrainer-chart:80']
  restartPolicy: Never
